--- a/package.json
+++ b/package.json
@@ -5,16 +5,18 @@
   "author": "Jan Banan",
   "dependencies": {
     "axios": "^0.17.1",
+    "dotenv": "^4.0.0",
     "gatsby": "^1.9.135",
     "gatsby-link": "^1.6.32",
-    "gatsby-plugin-react-helmet": "^1.0.8"
+    "gatsby-plugin-react-helmet": "^1.0.8",
+    "gatsby-source-contentful": "^1.3.34"
   },
   "license": "MIT",
   "scripts": {
     "build": "yarn && gatsby build",
-    "develop": "gatsby develop",
-    "format":
-      "prettier --trailing-comma es5 --no-semi --single-quote --write \"src/**/*.js\"",
+    "develop": "yarn clean && gatsby develop",
+    "clean": "rm -rf ./.cache",
+    "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"src/**/*.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
