--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
   "dependencies": {
     "axios": "^0.17.1",
     "dotenv": "^4.0.0",
+    "emotion": "^8.0.12",
+    "emotion-server": "^8.0.12",
     "gatsby": "^1.9.135",
     "gatsby-link": "^1.6.32",
+    "gatsby-plugin-emotion": "^1.1.11",
     "gatsby-plugin-react-helmet": "^1.0.8",
-    "gatsby-source-contentful": "^1.3.34"
+    "gatsby-source-contentful": "^1.3.34",
+    "gatsby-transformer-remark": "^1.7.29"
   },
   "license": "MIT",
   "scripts": {
