--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,10 @@
 {
-  "files.exclude": {
-    "**/.cache": true,
-    "**/public": true
-  },
-  "prettier.trailingComma": "all",
-  "prettier.semi": false,
-  "prettier.singleQuote": true
+    "files.exclude": {
+        "**/.cache": true,
+        "**/public": true
+    },
+    "prettier.trailingComma": "all",
+    "prettier.semi": false,
+    "prettier.singleQuote": true,
+    "editor.formatOnSave": true
 }
