--- a/package.json
+++ b/package.json
@@ -1,29 +1,30 @@
 {
-  "name": "Aptitud",
-  "description": "Aptitud.se",
-  "version": "1.0.0",
-  "author": "Jan Banan",
-  "dependencies": {
-    "axios": "^0.17.1",
-    "dotenv": "^4.0.0",
-    "emotion": "^8.0.12",
-    "emotion-server": "^8.0.12",
-    "gatsby": "^1.9.199",
-    "gatsby-link": "^1.6.32",
-    "gatsby-plugin-emotion": "^1.1.11",
-    "gatsby-plugin-react-helmet": "^1.0.8",
-    "gatsby-source-contentful": "^1.3.34",
-    "gatsby-transformer-remark": "^1.7.29"
-  },
-  "license": "MIT",
-  "scripts": {
-    "build": "yarn && gatsby build",
-    "develop": "yarn clean && gatsby develop",
-    "clean": "rm -rf ./.cache",
-    "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"src/**/*.js\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "devDependencies": {
-    "prettier": "^1.9.2"
-  }
+    "name": "Aptitud",
+    "description": "Aptitud.se",
+    "version": "1.0.0",
+    "author": "Jan Banan",
+    "dependencies": {
+        "axios": "^0.17.1",
+        "dotenv": "^4.0.0",
+        "emotion": "^8.0.12",
+        "emotion-server": "^8.0.12",
+        "gatsby": "^1.9.199",
+        "gatsby-link": "^1.6.32",
+        "gatsby-plugin-emotion": "^1.1.11",
+        "gatsby-plugin-react-helmet": "^1.0.8",
+        "gatsby-source-contentful": "^1.3.34",
+        "gatsby-transformer-remark": "^1.7.29"
+    },
+    "license": "MIT",
+    "scripts": {
+        "build": "yarn && node InstagramService.js && gatsby build",
+        "develop": "yarn clean && node InstagramService.js && gatsby develop",
+        "clean": "rm -rf ./.cache",
+        "format":
+            "prettier --trailing-comma es5 --no-semi --single-quote --write \"src/**/*.js\"",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "devDependencies": {
+        "prettier": "^1.9.2"
+    }
 }
