added aptigram as a 'real' source plugin

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "files.exclude": {
         "**/.cache": true,
-        "**/public": true
+        "**/public": true,
+        "**/node_modules": true
     },
     "prettier.trailingComma": "all",
     "prettier.semi": false,
