--- a/package.json
+++ b/package.json
@@ -13,15 +13,16 @@
         "gatsby-plugin-emotion": "^1.1.11",
         "gatsby-plugin-react-helmet": "^1.0.8",
         "gatsby-source-contentful": "^1.3.34",
+        "gatsby-source-filesystem": "^1.5.19",
+        "gatsby-transformer-json": "^1.0.15",
         "gatsby-transformer-remark": "^1.7.29"
     },
     "license": "MIT",
     "scripts": {
+        "start": "yarn develop",
         "build": "yarn && node InstagramService.js && gatsby build",
         "develop": "yarn clean && node InstagramService.js && gatsby develop",
-        "clean": "rm -rf ./.cache",
-        "format":
-            "prettier --trailing-comma es5 --no-semi --single-quote --write \"src/**/*.js\"",
+        "clean": "rm -rf ./.cache && rm -rf ./aptigram",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "devDependencies": {
