--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
         "gatsby-source-contentful": "^1.3.47",
         "gatsby-source-filesystem": "^1.5.19",
         "gatsby-transformer-json": "^1.0.15",
-        "gatsby-transformer-remark": "^1.7.29"
+        "gatsby-transformer-remark": "^1.7.29",
+        "react-emotion": "^9.1.2"
     },
     "license": "MIT",
     "scripts": {
