--- a/package.json
+++ b/package.json
@@ -1,33 +1,24 @@
 {
-  "name": "aptitud",
-  "description": "Aptitud.se",
+  "name": "aptitud.se",
   "version": "1.0.0",
-  "author": "Jan Banan",
-  "dependencies": {
-    "axios": "^0.17.1",
-    "dotenv": "^4.0.0",
-    "emotion": "^8.0.12",
-    "emotion-server": "^8.0.12",
-    "gatsby": "^1.9.199",
-    "gatsby-link": "^1.6.32",
-    "gatsby-plugin-emotion": "^1.1.11",
-    "gatsby-plugin-react-helmet": "^1.0.8",
-    "gatsby-source-contentful": "^1.3.47",
-    "gatsby-source-filesystem": "^1.5.19",
-    "gatsby-transformer-json": "^1.0.15",
-    "gatsby-transformer-remark": "^1.7.29",
-    "react-emotion": "^9.1.2"
-  },
-  "license": "MIT",
-  "scripts": {
-    "start": "yarn develop",
-    "build": "yarn && node instagram-service.js && gatsby build",
-    "develop": "yarn clean && node instagram-service.js && gatsby develop",
-    "clean": "rimraf ./.cache && rimraf ./aptigram",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "devDependencies": {
-    "prettier": "^1.9.2",
-    "rimraf": "^2.6.2"
+    "npm-run-all": "^4.1.5",
+    "rollup": "^1.12.0",
+    "rollup-plugin-commonjs": "^10.0.0",
+    "rollup-plugin-livereload": "^1.0.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-svelte": "^5.0.3",
+    "rollup-plugin-terser": "^4.0.4",
+    "svelte": "^3.0.0"
+  },
+  "dependencies": {
+    "sirv-cli": "^0.4.4"
+  },
+  "scripts": {
+    "build": "rollup -c",
+    "autobuild": "rollup -c -w",
+    "dev": "run-p start:dev autobuild",
+    "start": "sirv public --single",
+    "start:dev": "sirv public --single --dev"
   }
 }
