--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "name": "aptitud.se",
   "version": "1.0.0",
   "devDependencies": {
+    "dotenv": "^8.1.0",
     "npm-run-all": "^4.1.5",
+    "request": "^2.88.0",
+    "request-promise-native": "^1.0.7",
     "rollup": "^1.12.0",
     "rollup-plugin-commonjs": "^10.0.0",
+    "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-svelte": "^5.0.3",
@@ -16,6 +20,7 @@
   },
   "scripts": {
     "build": "rollup -c",
+    "aptigram": "node aptigram.js",
     "autobuild": "rollup -c -w",
     "dev": "run-p start:dev autobuild",
     "start": "sirv public --single",
