--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "sirv-cli": "^0.4.4"
   },
   "scripts": {
-    "build": "rollup -c",
+    "build": "node aptigram.js && rollup -c",
     "aptigram": "node aptigram.js",
     "autobuild": "rollup -c -w",
     "dev": "run-p start:dev autobuild",
