--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
-    "sirv-cli": "^0.4.4"
+    "marked": "^0.7.0",
+    "node-sass": "^4.12.0",
+    "sirv-cli": "^0.4.4",
+    "svelte-preprocess": "^3.1.2"
   },
   "scripts": {
     "build": "node aptigram.js && rollup -c",
