--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "jsdom": "^15.2.0",
     "marked": "^0.7.0",
     "node-sass": "^4.12.0",
     "sirv-cli": "^0.4.4",
@@ -23,7 +24,7 @@
   },
   "scripts": {
     "build": "node aptigram.js && node contentful.js && rollup -c",
-    "netlify": "node aptigram.js && node contentful.js && rollup -c && node build.js",
+    "build-static": "node aptigram.js && node contentful.js && rollup -c && node build.js",
     "aptigram": "node aptigram.js",
     "contentful": "node contentful.js",
     "autobuild": "rollup -c -w",
