--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "devDependencies": {
     "dotenv": "^8.1.0",
     "npm-run-all": "^4.1.5",
+    "prettier": "^2.0.5",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.7",
     "rollup": "^1.12.0",
