dont fetch ig on build

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "scripts": {
     "build": "node aptigram.js && node contentful.js && rollup -c",
-    "build-static": "node aptigram.js && node contentful.js && rollup -c && node build.js",
+    "build-static": "node contentful.js && rollup -c && node build.js",
     "aptigram": "node aptigram.js",
     "contentful": "node contentful.js",
     "autobuild": "rollup -c -w",
