--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "node-sass": "^5.0.0",
     "sass": "^1.29.0",
     "sirv-cli": "^0.4.4",
-    "svelte-preprocess": "^3.1.2"
+    "svelte-preprocess": "^3.1.2",
+    "@netlify/functions": "^1.6.0"
   },
   "scripts": {
     "build": "node aptigram.js && node contentful.js && rollup -c",
